# robomagellan_rp2040_firmware

./: .gitmodules  CMakeLists.txt  README.md  etherbotix.hpp  main.c  vesc.c  vesc.h
libraries/: CMakeLists.txt
