add_library(ETHERNET_FILES STATIC)
target_sources(ETHERNET_FILES PUBLIC
  ${WIZNET_DIR}/Ethernet/socket.c
  ${WIZNET_DIR}/Ethernet/wizchip_conf.c
)
target_include_directories(ETHERNET_FILES INTERFACE
  ${WIZNET_DIR}/Ethernet
  ${WIZNET_DIR}/Ethernet/W5500
)
target_link_libraries(ETHERNET_FILES PUBLIC
  W5500_FILES
)

add_library(W5500_FILES STATIC)
target_sources(W5500_FILES PUBLIC
  ${WIZNET_DIR}/Ethernet/W5500/w5500.c
)
target_include_directories(W5500_FILES INTERFACE
  ${WIZNET_DIR}/Ethernet
  ${WIZNET_DIR}/Ethernet/W5500
)
target_link_libraries(W5500_FILES PRIVATE
  ETHERNET_FILES
)
